5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1747_3092.log
== TEST (2019-05-16 11:23:40) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
if e=="V":
	p=3
elif e=="D":
	p=1
elif e=="E":
	p=2
d=0
s=0
while e!="X":
	s=p+s
	d=d+1
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
2
4
6
8
10
12
14
16
18
20
22
24
26
28
30
32
34
36
38
40
42
44
46
48
50
52
54
56
58
60
62
64
66
68
70
72
74
76
78
80
82
84
86
88
90
92
94
96
98
100
102
104
106
108
110
112
114
116
118
120
122
124
126
128
130
132
134
136
138
140
142
144
146
148
150
152
154
156
158
160
162
164
166
168
170
172
174
176
178
180
182
184
186
188
190
192
194
196
198
200
202
204
206
208
210
212
214
216
218
220
222
224
226
228
230
232
234
236
238
240
242
244
246
248
250
252
254
256
258
260
262
264
266
268
270
272
274
276
278
280
282
284
286
288
290
292
294
296
298
300
302
304
306
308
310
312
314
316
318
320
322
324
326
328
330
332
334
336
338
340
342
344
346
348
350
352
354
356
358
360
362
364
366
368
370
372
374
376
378
380
382
384
386
388
390
392
394
396
398
400
402
404
406
408
410
412
414
416
418
420
422
424
426
428
430
432
434
436
438
440
442
444
446
448
450
452
454
456
458
460
462
464
466
468
470
472
474
476
478
480
482
484
486
488
490
492
494
496
498
500
502
504
506
508
510
512
514
516
518
520
522
524
526
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:24:39) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
if e=="V":
	p=3
elif e=="D":
	p=1
elif e=="E":
	p=2
d=0
s=0
while e!="X":
	s=p+s
	d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:21) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
if e=="V":
	p=3
elif e=="D":
	p=1
elif e=="E":
	p=2
d=0
s=0
while e!="X":
	if e== "X" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:09) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
if e=="V":
	p=3
elif e=="D":
	p=1
elif e=="E":
	p=2
d=0
s=0
while e!="X":
	if e== "X" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
	print(s)
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
9
12
15
18
21
24
27
30
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:00) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
if e=="V":
	p=3
elif e=="D":
	p=1
elif e=="E":
	p=2
d=0
s=0
while e!="X":
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
	print(s)
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
9
12
15
18
21
24
27
30
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:04) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V":
		p=3
	elif e=="D":
		p=1
	elif e=="E":
		p=2
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
	print(s)
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
8
10
11
12
13
14
15
16
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:39) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V":
		p=3
	elif e=="D":
		p=1
	elif e=="E":
		p=2
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
		print(s)
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
8
10
11
12
13
14
15
16
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:16) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V":
		p=3
	elif e=="D":
		p=1
	elif e=="E":
		p=2
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:31:35) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V":
		p=3
	elif e=="D":
		p=1
	elif e=="E":
		p=2
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- EXECUTION TIME:
0.227671
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
53.33
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
50.0
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:41) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V":
		p=3
	elif e=="D":
		p=1
	elif e=="E":
		p=2
	if e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:27) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		elif e=="D":
			p=1
		elif e=="E":
			p=2
		if e== "V" or "D" or "E":
			s=p+s
			d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:34:17) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=1
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		elif e=="D":
			p=1
		elif e=="E":
			p=2
		if e== "V" or "D" or "E":
			s=p+s
			d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
48.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:10) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		if e== "V" or "D" or "E":
			s=p+s
			d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:15) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		e== "V" or "D" or "E":
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- ERROR:
File "XXXX", line 12
    e== "V" or "D" or "E":
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:30) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:36:58) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:36) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or "D" or "E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
		print(s)
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
8
10
11
12
13
14
15
16
53.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:39) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or e=="D" or e=="E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
		print(s)
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
3
6
8
10
11
12
13
61.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:00) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or e=="D" or e=="E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- OUTPUT:
61.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:39:20) 
-- CODE:
e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
d=0
s=0
while e!="X":
	if e=="V" or e=="D" or e=="E":
		if e=="V":
			p=3
		if e=="D":
			p=1
		if e=="E":
			p=2
		s=p+s
		d=d+1
	e= input("insira V para vitoria, D para derrota ou E para empate: ").upper()
r=s*100/(d*3)
print(round(r,2))
-- EXECUTION TIME:
0.183077
-- TEST CASE 1:
---- input:
v
V
e
E
D
D
a
b
c
d
X
---- correct output:
61.9
---- user output:
61.9
-- TEST CASE 2:
---- input:
V
E
D
C
B
A
X
---- correct output:
66.67
---- user output:
66.67
-- TEST CASE 3:
---- input:
A
A
A
v
v
V
V
X
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
